# da-commit-dockerized

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs
