[package]
name = "da_commit"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
# You might need to modify those to point to the correct branches whilst in development... or customize the patch section below
cb-cli = { git = "https://github.com/LimeChain/commit-boost-client", branch = "feat/metrics"}
cb-common = { git = "https://github.com/LimeChain/commit-boost-client", branch = "feat/metrics"}
cb-pbs = { git = "https://github.com/LimeChain/commit-boost-client", branch = "feat/metrics"}
cb-crypto = { git = "https://github.com/LimeChain/commit-boost-client", branch = "feat/metrics"}
cb-metrics = { git = "https://github.com/LimeChain/commit-boost-client", branch = "feat/metrics"}

alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "64feb9bc51c8021ea08535694c44de84222f474e" }

reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
axum = "0.7.5"

tree_hash = "0.5"
tree_hash_derive = "0.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

tracing = "0.1.40"
eyre = "0.6.12"

# # Patch for local development
# [patch."https://github.com/LimeChain/commit-boost-client"]
# cb-cli = { path = "./cb/crates/cli"}
# cb-common = { path = "./cb/crates/common"}
# cb-pbs = { path = "./cb/crates/pbs"}
# cb-crypto = { path = "./cb/crates/crypto"}
# cb-metrics = { path = "./cb/crates/metrics"}